--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "start": "react-scripts start",
     "start-api": "cd api && venv/bin/flask run",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
